--- a/7.0/alpine/Dockerfile
+++ b/7.0/alpine/Dockerfile
@@ -43,9 +43,9 @@ RUN mkdir -p $PHP_INI_DIR/conf.d
 # Enable linker optimization (this sorts the hash buckets to improve cache locality, and is non-default)
 # Adds GNU HASH segments to generated executables (this is used if present, and is much faster than sysv hash; in this configuration, sysv hash is also generated)
 # https://github.com/docker-library/php/issues/272
-ENV CFLAGS="-fstack-protector-strong -fpic -fpie -O2"
-ENV CPPFLAGS="$CFLAGS"
-ENV LDFLAGS="-Wl,-O1 -Wl,--hash-style=both"
+ENV PHP_CFLAGS="-fstack-protector-strong -fpic -fpie -O2"
+ENV PHP_CPPFLAGS="$PHP_CFLAGS"
+ENV PHP_LDFLAGS="-Wl,-O1 -Wl,--hash-style=both -pie"
 
 ENV GPG_KEYS 1A4E8B7277C42E53DBA9C7B9BCAA30EA9C0D5763
 
@@ -95,6 +95,9 @@ RUN set -xe \
 		openssl-dev \
 		sqlite-dev \
 	\
+	&& export CFLAGS="$PHP_CFLAGS" \
+		CPPFLAGS="$PHP_CPPFLAGS" \
+		LDFLAGS="$PHP_LDFLAGS" \
 	&& docker-php-source extract \
 	&& cd /usr/src/php \
 	&& ./configure \
