--- a/7.2-rc/alpine/Dockerfile
+++ b/7.2-rc/alpine/Dockerfile
@@ -59,7 +59,7 @@ RUN set -xe; \
 	\
 	apk add --no-cache --virtual .fetch-deps \
 		gnupg \
-		openssl \
+		libressl \
 	; \
 	\
 	mkdir -p /usr/src; \
@@ -94,8 +94,8 @@ RUN set -xe \
 		coreutils \
 		curl-dev \
 		libedit-dev \
+		libressl-dev \
 		libxml2-dev \
-		openssl-dev \
 		sqlite-dev \
 	\
 	&& export CFLAGS="$PHP_CFLAGS" \
