--- a/Dockerfile-alpine.template
+++ b/Dockerfile-alpine.template
@@ -53,7 +53,7 @@ RUN set -xe; \
 	\
 	apk add --no-cache --virtual .fetch-deps \
 		gnupg \
-		openssl \
+		libressl \
 	; \
 	\
 	mkdir -p /usr/src; \
@@ -88,8 +88,8 @@ RUN set -xe \
 		coreutils \
 		curl-dev \
 		libedit-dev \
+		libressl-dev \
 		libxml2-dev \
-		openssl-dev \
 		sqlite-dev \
 	\
 	&& export CFLAGS="$PHP_CFLAGS" \
