--- a/7.2-rc/zts/alpine/Dockerfile
+++ b/7.2-rc/zts/alpine/Dockerfile
@@ -54,9 +54,9 @@ ENV PHP_LDFLAGS="-Wl,-O1 -Wl,--hash-style=both -pie"
 
 ENV GPG_KEYS 1729F83938DA44E27BA0F4D3DBDB397470D12172 B1B44D8F021E4E2D6021E995DC9FF8D3EE5AF27F
 
-ENV PHP_VERSION 7.2.0RC2
-ENV PHP_URL="https://downloads.php.net/~pollita/php-7.2.0RC2.tar.xz" PHP_ASC_URL="https://downloads.php.net/~pollita/php-7.2.0RC2.tar.xz.asc"
-ENV PHP_SHA256="0406366fcd5be4ee5e76e3c6a4279e04f93a1827a44d27c4f57fbed9e01cd281" PHP_MD5=""
+ENV PHP_VERSION 7.2.0RC3
+ENV PHP_URL="https://downloads.php.net/~remi/php-7.2.0RC3.tar.xz" PHP_ASC_URL="https://downloads.php.net/~remi/php-7.2.0RC3.tar.xz.asc"
+ENV PHP_SHA256="abe0a237f94837854f2cfd9c7dc99fbca2c817ae1d6194a514f29b463db36853" PHP_MD5=""
 
 RUN set -xe; \
 	\
