--- a/.travis.yml
+++ b/.travis.yml
@@ -2,34 +2,34 @@ language: bash
 services: docker
 
 env:
+  - VERSION=7.2-rc VARIANT=stretch/cli
+  - VERSION=7.2-rc VARIANT=stretch/apache
+  - VERSION=7.2-rc VARIANT=stretch/fpm
+  - VERSION=7.2-rc VARIANT=stretch/zts
   - VERSION=7.2-rc VARIANT=alpine3.6/cli
   - VERSION=7.2-rc VARIANT=alpine3.6/fpm
   - VERSION=7.2-rc VARIANT=alpine3.6/zts
-  - VERSION=7.2-rc VARIANT=stretch-slim/apache
-  - VERSION=7.2-rc VARIANT=stretch-slim/cli
-  - VERSION=7.2-rc VARIANT=stretch-slim/fpm
-  - VERSION=7.2-rc VARIANT=stretch-slim/zts
+  - VERSION=7.1 VARIANT=jessie/cli
+  - VERSION=7.1 VARIANT=jessie/apache
+  - VERSION=7.1 VARIANT=jessie/fpm
+  - VERSION=7.1 VARIANT=jessie/zts
   - VERSION=7.1 VARIANT=alpine3.4/cli
   - VERSION=7.1 VARIANT=alpine3.4/fpm
   - VERSION=7.1 VARIANT=alpine3.4/zts
-  - VERSION=7.1 VARIANT=jessie/apache
-  - VERSION=7.1 VARIANT=jessie/cli
-  - VERSION=7.1 VARIANT=jessie/fpm
-  - VERSION=7.1 VARIANT=jessie/zts
+  - VERSION=7.0 VARIANT=jessie/cli
+  - VERSION=7.0 VARIANT=jessie/apache
+  - VERSION=7.0 VARIANT=jessie/fpm
+  - VERSION=7.0 VARIANT=jessie/zts
   - VERSION=7.0 VARIANT=alpine3.4/cli
   - VERSION=7.0 VARIANT=alpine3.4/fpm
   - VERSION=7.0 VARIANT=alpine3.4/zts
-  - VERSION=7.0 VARIANT=jessie/apache
-  - VERSION=7.0 VARIANT=jessie/cli
-  - VERSION=7.0 VARIANT=jessie/fpm
-  - VERSION=7.0 VARIANT=jessie/zts
+  - VERSION=5.6 VARIANT=jessie/cli
+  - VERSION=5.6 VARIANT=jessie/apache
+  - VERSION=5.6 VARIANT=jessie/fpm
+  - VERSION=5.6 VARIANT=jessie/zts
   - VERSION=5.6 VARIANT=alpine3.4/cli
   - VERSION=5.6 VARIANT=alpine3.4/fpm
   - VERSION=5.6 VARIANT=alpine3.4/zts
-  - VERSION=5.6 VARIANT=jessie/apache
-  - VERSION=5.6 VARIANT=jessie/cli
-  - VERSION=5.6 VARIANT=jessie/fpm
-  - VERSION=5.6 VARIANT=jessie/zts
 
 install:
   - git clone https://github.com/docker-library/official-images.git ~/official-images
