--- a/7.2-rc/alpine3.6/cli/Dockerfile
+++ b/7.2-rc/alpine3.6/cli/Dockerfile
@@ -53,9 +53,9 @@ ENV PHP_LDFLAGS="-Wl,-O1 -Wl,--hash-style=both -pie"
 
 ENV GPG_KEYS 1729F83938DA44E27BA0F4D3DBDB397470D12172 B1B44D8F021E4E2D6021E995DC9FF8D3EE5AF27F
 
-ENV PHP_VERSION 7.2.0RC4
-ENV PHP_URL="https://downloads.php.net/~remi/php-7.2.0RC4.tar.xz" PHP_ASC_URL="https://downloads.php.net/~remi/php-7.2.0RC4.tar.xz.asc"
-ENV PHP_SHA256="08ee9e764891224d73f157e01594605fc85c63ffc9d4773d9ac29b0e3160c68f" PHP_MD5=""
+ENV PHP_VERSION 7.2.0RC5
+ENV PHP_URL="https://downloads.php.net/~pollita/php-7.2.0RC5.tar.xz" PHP_ASC_URL="https://downloads.php.net/~pollita/php-7.2.0RC5.tar.xz.asc"
+ENV PHP_SHA256="92a745048912beb3f6c2a3c188ce695a51852c67201fdf9a21dafe59f51aecc1" PHP_MD5=""
 
 RUN set -xe; \
 	\
